--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2982,6 +2982,11 @@ path = "examples/shader/fallback_image.rs"
 doc-scrape-examples = true
 
 [[example]]
+name = "fft"
+path = "examples/shader/fft.rs"
+doc-scrape-examples = true
+
+[[example]]
 name = "reflection_probes"
 path = "examples/3d/reflection_probes.rs"
 doc-scrape-examples = true
